source/app/static/assets/css/dark-theme.css
/* ... */
.quick-actions .quick-actions-item {
  display: flex;
  flex-direction: column;
  margin: 7.5px 7.5px;
  padding: 10px;
  align-items: center;
  color: #1572E8;
  border: 1px solid #595959;
  background-color: #2f3348;
  border-radius: 3px;
  transition: all .2s;
}

.quick-actions .quick-actions-item i {
  color: #fff;
  font-size: 27px;
}

.quick-actions.quick-actions-primary .quick-actions-item {
  color: #74A4E1;
}

.quick-actions .quick-actions-item:hover {
  background: #30303e;
  color: #1572E8;
  box-shadow: none;
}

.tree li.parent_li > span {
  background: #eee;
}

.tree li.parent_li > span {
  background: rgba(185, 185, 185, 0.18);
}

.form-check [type="checkbox"]:not(:checked) + .form-check-sign, .form-check [type="checkbox"]:checked + .form-check-sign, .form-check [type="checkbox"] + .form-check-sign {
  position: relative;
  padding-left: 2em;
  color: #d9d9d9;
  cursor: pointer;
}

.text-dark {
  color: #d2d2d2 !important;
}

body .form-control:disabled,
body .form-control[readonly] {
    color: #cac7c7;
}

body .form-check [type="checkbox"] + .form-check-sign {
	color: #cac7c7;
}

body .bg-primary-gradient{
    background: #1f283e !important;
    background: -webkit-linear-gradient(legacy-direction(-45deg), #0A0B11, #1f283e) !important;
    background: linear-gradient(-45deg, #0A0B11, #1f283e) !important;
}

body .modal-header,
body .modal-footer {
      border-top: none;
      border-bottom: none;
}

body .modal-header .text-right button {
    color: #cecece;
}

.sidebar.sidebar-style-2 .nav .nav-item a:hover p,
.sidebar.sidebar-style-2 .nav .nav-item a:hover i,
.sidebar.sidebar-style-2 .nav .nav-item a:focus p,
.sidebar.sidebar-style-2 .nav .nav-item a:focus i,
.sidebar.sidebar-style-2 .nav .nav-item a[data-toggle=collapse][aria-expanded=true] p,
.sidebar.sidebar-style-2 .nav .nav-item a[data-toggle=collapse][aria-expanded=true] i,
.sidebar.sidebar-style-2 .nav .nav-item a:hover p,
.sidebar.sidebar-style-2 .nav .nav-item a:hover i,
.sidebar.sidebar-style-2 .nav .nav-item a:focus p,
.sidebar.sidebar-style-2 .nav .nav-item a:focus i,
.sidebar.sidebar-style-2 .nav .nav-item a[data-toggle=collapse][aria-expanded=true] p,
.sidebar.sidebar-style-2 .nav .nav-item a[data-toggle=collapse][aria-expanded=true] i {
    color: #b9babf !important;
}

.sidebar.sidebar-style-2 .nav .nav-item.active a,
.sidebar.sidebar-style-2 .nav .nav-item.active a {
    color: #ffffff;
}

.sidebar.sidebar-style-2 .nav .nav-item.active a p,
.sidebar.sidebar-style-2 .nav .nav-item.active a i,
.sidebar.sidebar-style-2 .nav .nav-item.active a .caret,
.sidebar.sidebar-style-2 .nav .nav-item.active a span,
.sidebar.sidebar-style-2 .nav .nav-item.active a p,
.sidebar.sidebar-style-2 .nav .nav-item.active a i,
.sidebar.sidebar-style-2 .nav .nav-item.active a .caret,
.sidebar.sidebar-style-2 .nav .nav-item.active a span {
    color: #ffffff;
}

.sidebar.sidebar-style-2 .nav .nav-item.active a[data-toggle=collapse][aria-expanded=true] p,
.sidebar.sidebar-style-2 .nav .nav-item.active a[data-toggle=collapse][aria-expanded=true] i,
.sidebar.sidebar-style-2 .nav .nav-item.active a[data-toggle=collapse][aria-expanded=true] .caret,
.sidebar.sidebar-style-2 .nav .nav-item.active a[data-toggle=collapse][aria-expanded=true] span,
.sidebar.sidebar-style-2 .nav .nav-item.active a[data-toggle=collapse][aria-expanded=true] p,
.sidebar.sidebar-style-2 .nav .nav-item.active a[data-toggle=collapse][aria-expanded=true] i,
.sidebar.sidebar-style-2 .nav .nav-item.active a[data-toggle=collapse][aria-expanded=true] .caret,
.sidebar.sidebar-style-2 .nav .nav-item.active a[data-toggle=collapse][aria-expanded=true] span {
    color: #ffffff;
}


.main-header .navbar-header .nav-search .input-group {
    background: rgba(185, 185, 185, 0.18) !important;
}

.main-header .navbar-header .navbar-nav .nav-item .nav-link:hover,
.main-header .navbar-header .navbar-nav .nav-item .nav-link:focus {
    background: rgba(185, 185, 185, 0.18) !important;
}

.main-header .navbar-header .navbar-nav .nav-item.active .nav-link {
    background: rgba(185, 185, 185, 0.18) !important;
}

.logo-header {
    background: #1a2035 !important;
}

.navbar-header {
    background: #1a2035 !important;
}

.sidebar {
    background: #1a2035 !important;
}

.sidebar .user {
    border-color: rgba(181, 181, 181, 0.1) !important;
}

.sidebar .user .info a>span {
    color: #b9babf;
}

.sidebar .user .info a>span .user-level {
    color: #8d9498;
}

.sidebar .nav>.nav-item.active>a p {
    color: #b9babf !important;
}

.sidebar .nav>.nav-item a {
    color: #b9babf !important;
}

.sidebar .nav>.nav-item a:hover p,
.sidebar .nav>.nav-item a:focus p,
.sidebar .nav>.nav-item a[data-toggle=collapse][aria-expanded=true] p {
    color: #b9babf !important;
}

.sidebar.sidebar-style-2 .nav .nav-item.active>a,
.sidebar.sidebar-style-2 .nav .nav-item.active>a:hover,
.sidebar.sidebar-style-2 .nav .nav-item.active>a:focus,
.sidebar.sidebar-style-2 .nav .nav-item.active>a[data-toggle=collapse][aria-expanded=true] {
    background: #fff !important;
    color: #1a2035 !important;
}

.sidebar.sidebar-style-2 .nav .nav-item.active>a p,
.sidebar.sidebar-style-2 .nav .nav-item.active>a i,
.sidebar.sidebar-style-2 .nav .nav-item.active>a .caret,
.sidebar.sidebar-style-2 .nav .nav-item.active>a:hover p,
.sidebar.sidebar-style-2 .nav .nav-item.active>a:hover i,
.sidebar.sidebar-style-2 .nav .nav-item.active>a:hover .caret,
.sidebar.sidebar-style-2 .nav .nav-item.active>a:focus p,
.sidebar.sidebar-style-2 .nav .nav-item.active>a:focus i,
.sidebar.sidebar-style-2 .nav .nav-item.active>a:focus .caret,
.sidebar.sidebar-style-2 .nav .nav-item.active>a[data-toggle=collapse][aria-expanded=true] p,
.sidebar.sidebar-style-2 .nav .nav-item.active>a[data-toggle=collapse][aria-expanded=true] i,
.sidebar.sidebar-style-2 .nav .nav-item.active>a[data-toggle=collapse][aria-expanded=true] .caret {
    color: #1a2035 !important;
}
/* ... */

